# harvest-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/codeql/: codeql-config.yml
.github/workflows/: bandit.yml  containers.yml  hardening.yml  pytest.yml  security.yml
app/: auth.py  config.py  database.py  main.py
app/admin/: admin_routes.py  permission_schemas.py
app/ai/: plant_info_agent.py
app/auth/: auth.py  auth_routes.py  auth_schemas.py
app/beds/: bed_crud.py  bed_models.py  bed_note_crud.py  bed_note_routes.py  bed_note_schemas.py  bed_notes_crud.py  bed_notes_routes.py  bed_routes.py  bed_schemas.py
app/casbin/: README.md  casbin_config.py  casbin_helpers.py  casbin_middleware.py  casbin_model.conf  default_policies.py  permissions.py
app/core/: auth.py  middleware.py
app/crud/: page_crud.py  role_crud.py  users_crud.py
app/gardens/: bed_crud.py  bed_models.py  bed_routes.py  garden_crud.py  garden_models.py  garden_note_crud.py  garden_note_routes.py  garden_note_schemas.py  garden_routes.py  garden_schemas.py
app/helpers/: bed_helpers.py  garden_helpers.py  helper_models.py  page_helpers.py  plant_helpers.py  user_helpers.py
app/logging/: __init__.py  log_config.py  log_decorators.py  log_exceptions.py  log_handler.py  log_middleware.py
app/models/: ai_recommendation_model.py  base.py  basic_auth.py  bed_models.py  garden.py  garden_models.py  helper_models.py  jwt_auth_model.py  model_base.py  page_models.py  pages.py  plant_models.py  recommendation_model.py  role_models.py  user_manager.py  user_models.py  users.py  utils.py
app/pages/: page_crud.py  page_models.py  page_routes.py  page_schemas.py
app/plants/: plant_crud.py  plant_models.py  plant_notes_crud.py  plant_notes_routes.py  plant_notes_schemas.py  plant_routes.py  plant_schema.py  (+3 more)
tests/: README.md  conftest.py  test_db.py
(+151 files in other folders)
