[project]
name = "Harvesting.Food"
version = "0.1.0"
description = "API for the https://harvesting.food website"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.6.10",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "passlib==1.7.4",
    "pydantic-settings>=2.7.1",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "email-validator>=2.2.0",
    "pyjwt[crypto]>=2.10.1",
    "password-validator>=1.0",
    "pydantic-ai>=0.7.2",
    "asyncpg>=0.30.0",
    "sqlmodel>=0.0.24",
    "bcrypt==4.3.0",
    "structlog>=25.4.0",
    "casbin-async-sqlalchemy-adapter>=1.10.0",
    "casbin>=1.43.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.bandit]
exclude_dirs = ["./tests"]
skips = ["B101"]
